update page turn using turn.js api

--- a/app/css/notebook.css
+++ b/app/css/notebook.css
@@ -24,7 +24,8 @@ body {
   left: 0px;
   right: 0px;
   bottom: 0px;
-  margin: auto; }
+  margin: auto;
+  overflow: hidden; }
 
 .notebook-paper {
   position: absolute;
@@ -69,70 +70,9 @@ body {
   background-position: 6px 6px, 6px 5px, 50% 18px;
   background-repeat: repeat;
   background-size: 30px 30px;
-  position: relative;
-  transition: transform 2s; }
+  position: relative; }
 
-.left-page {
-  float: left; }
-
-/* Hover Page Corners */
-.right-page::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  border-style: solid;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
-  width: 0;
-  border-width: 0px;
-  border-color: #eeece078 rgba(121, 120, 113, 0.43) rgba(125, 125, 117, 0.43) #eeece038;
-  border-radius: 0 0 0px 0;
-  transition: border-width .3s; }
-
-.right-page:hover {
-  border-radius: 0px;
-  transition-delay: .1s; }
-
-.right-page:hover:after {
-  border-width: 30px; }
-
-/* DIVS cover corners to attach click events for JS page turn */
-.right-page .page-corner {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  width: 80px;
-  height: 80px;
-  z-index: 12; }
-
-.left-page .page-corner {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  width: 80px;
-  height: 80px;
-  z-index: 12; }
-
-/******** JS styles  ********/
-/* Page turn - JS*/
-.notebook-paper .even {
-  transform-origin: center left; }
-
-.notebook-paper .even.turn {
-  transform: rotateY(-180deg); }
-
-.notebook-paper .odd {
-  transform-origin: center right; }
-
-.notebook-paper .odd.turn {
-  transform: rotateY(180deg); }
-
-/* Page Section Load in Styles - JS */
-.pre-turn-even {
-  transform: rotateY(180deg); }
-
-.book-section .left-page.turn,
-.book-section .right-page.turn {
-  transform: none; }
+.right-page {
+  border-left: 1px solid black; }
 
 /* Notebook End */
